Fix scrollbars for old apps

--- a/src/App/shared.scss
+++ b/src/App/shared.scss
@@ -32,16 +32,6 @@ body {
     border-radius: 0px;
 }
 
-::-webkit-scrollbar, ::-webkit-scrollbar-corner {
-    width: 1em;
-    height: 1em;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 1em;
-    border: 0.39em solid;
-}
-
 // used when tabbing and space
 :focus {
     outline-color: $accent !important;
@@ -49,4 +39,16 @@ body {
 }
 :focus:active {
     outline-style: none;
+}
+
+.core19-app {
+    ::-webkit-scrollbar, ::-webkit-scrollbar-corner {
+        width: 1em;
+        height: 1em;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 1em;
+        border: 0.39em solid;
+    }
 }
